fixed overlay over projects images, fixed from hover to click on mobile devices, added harlosa project

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -148,26 +148,22 @@ color:rgb(75, 85, 99)
 
 
 .project-image {
-  border-radius: 10px;
   position: relative;
 }
 
-.project-image.hovered {
-  opacity: 0.5;
-}
 
 .overlay {
   opacity: 1;
   position: absolute;
   top: 0;
-  width: 60%;
+  width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.7);
   transition: opacity 0.3s;
   display: flex;
   justify-content: center;
   align-items: center;
-  border-radius: 10px;
+  border-radius: 5px;
 }
 
 .overlay-content {
